# subvost

./: .gitignore  Dockerfile  Makefile  alembic.ini  dev_requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4540410cc072_init.py  7c74d0137520_add_status_to_payment.py
app/: db.py  main.py  models.py  router.py  schemas.py  services.py
app/core/: config.py  dependecies.py  security.py
app/tests/: conftest.py  test_api.py  test_validate_payment.py
html/: pay.html
